--- a/app/template/default/Product/list.twig
+++ b/app/template/default/Product/list.twig
@@ -92,7 +92,8 @@ file that was distributed with this source code.
             e.stopPropagation();
         });
         $('.ec-modal-overlay, .ec-modal, .ec-modal-close, .ec-inlineBtn--cancel').on('click', function() {
-            $('.ec-modal').hide()
+            $('.ec-modal').hide();
+            location.reload();
         });
     </script>
 {% endblock %}
@@ -153,6 +154,7 @@ file that was distributed with this source code.
                     {% for Product in pagination %}
                         {% set categoryFound = false %}
                         {% set product_for_paid = false %}
+                        {% set paid_user_usage_mode = 'Upcoming' %}
                         {% set paid_user_usage_status = '0' %}
                         {% set regular_price = null %}
                         {% set discount_price = null %}
@@ -171,6 +173,7 @@ file that was distributed with this source code.
                                     {% set paid_user_usage_status = ticket_price.paid_user_usage_status %}
                                     {% set regular_price = ticket_price.regular_price %}
                                     {% set discount_price = ticket_price.discount_price %}
+                                    {% set paid_user_usage_mode = ticket_price.paid_user_usage_mode %}
                                 {% endif %}
                             {% endfor %}
                         {% endif %}
@@ -240,7 +243,7 @@ file that was distributed with this source code.
                             {% if Product.stock_find %}
                                 {% set form = forms[Product.id] %}
                                 <form name="form{{ Product.id }}" id="productForm{{ Product.id }}" action="{{ url('product_add_cart', {id:Product.id}) }}" method="post">
-                                    <div class="ec-productRole__actions">
+                                    <div class="ec-productRole__actions {% if categoryFound %} cart-quantity-hidden {% endif %}">
                                         {% if form.classcategory_id1 is defined %}
                                             <div class="ec-select">
                                                 {{ form_widget(form.classcategory_id1) }}
@@ -261,41 +264,49 @@ file that was distributed with this source code.
                                     {{ form_rest(form) }}
                                 </form>
                                 {% if categoryFound %}
-                                    {% if hashgoru_user %}
-                                        {% if is_paid_user %}
-                                            <div class="ec-productRole__btn">
-                                                <button type="submit" class="ec-blockBtn--action add-cart" data-cartid="{{ Product.id }}" form="productForm{{ Product.id }}">
-                                                    {{ 'front.product.add_cart'|trans }} 
-                                                </button>
-                                            </div>
-                                        {% else %}
-                                            {% if paid_user_usage_status == '1' %}
-                                                <div class="ec-productRole__btn">
-                                                    <button type="button" class="ec-blockBtn--action add-cart" disabled>
-                                                        {{ 'ハシゴる有料会員用' }} 
-                                                    </button>
-                                                </div>
-                                            {% else %}
+                                    {% if paid_user_usage_mode == 'Upcoming' %}
+                                        <div class="ec-productRole__btn">
+                                            <button type="button" class="ec-blockBtn--action disabled-add-to-cart" disabled>
+                                                {{ '今後販売予定' }} 
+                                            </button>
+                                        </div>
+                                    {% else %}
+                                        {% if hashgoru_user %}
+                                            {% if is_paid_user %}
                                                 <div class="ec-productRole__btn">
                                                     <button type="submit" class="ec-blockBtn--action add-cart" data-cartid="{{ Product.id }}" form="productForm{{ Product.id }}">
                                                         {{ 'front.product.add_cart'|trans }} 
                                                     </button>
                                                 </div>
+                                            {% else %}
+                                                {% if paid_user_usage_status == '1' %}
+                                                    <div class="ec-productRole__btn">
+                                                        <button type="button" class="ec-blockBtn--action disabled-add-to-cart" disabled>
+                                                            {{ 'ハシゴる有料会員用' }} 
+                                                        </button>
+                                                    </div>
+                                                {% else %}
+                                                    <div class="ec-productRole__btn">
+                                                        <button type="submit" class="ec-blockBtn--action add-cart" data-cartid="{{ Product.id }}" form="productForm{{ Product.id }}">
+                                                            {{ 'front.product.add_cart'|trans }} 
+                                                        </button>
+                                                    </div>
+                                                {% endif %}
                                             {% endif %}
-                                        {% endif %}
-                                    {% else %}
-                                        {% if paid_user_usage_status == '1' %}
-                                             <div class="ec-productRole__btn">
-                                                <button type="button" class="ec-blockBtn--action add-cart" disabled>
-                                                    {{ 'ハシゴる有料会員用' }} 
-                                                </button>
-                                            </div>
                                         {% else %}
-                                            <div class="ec-productRole__btn">
-                                                <button type="button" class="ec-blockBtn--action add-cart" disabled>
-                                                    {{ 'ハシゴる会員用' }} 
-                                                </button>
-                                            </div>
+                                            {% if paid_user_usage_status == '1' %}
+                                                 <div class="ec-productRole__btn">
+                                                    <button type="button" class="ec-blockBtn--action disabled-add-to-cart" disabled>
+                                                        {{ 'ハシゴる有料会員用' }} 
+                                                    </button>
+                                                </div>
+                                            {% else %}
+                                                <div class="ec-productRole__btn">
+                                                    <button type="button" class="ec-blockBtn--action disabled-add-to-cart" disabled>
+                                                        {{ 'ハシゴる会員用' }} 
+                                                    </button>
+                                                </div>
+                                            {% endif %}
                                         {% endif %}
                                     {% endif %}
                                 {% else %}
@@ -308,7 +319,7 @@ file that was distributed with this source code.
                                             </div>
                                         {% else %}
                                            <div class="ec-productRole__btn">
-                                                <button type="button" class="ec-blockBtn--action add-cart" disabled>
+                                                <button type="button" class="ec-blockBtn--action disabled-add-to-cart" disabled>
                                                     {{ 'ハシゴる有料会員用' }} 
                                                 </button>
                                             </div>
